fix(logs): don't return the new entries on the logs after saving
