# docs/swagger.json
@@ -2429,6 +2429,59 @@
             }
         },
         "/devices/{id}/user-meta": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "get device user metadata",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "devices"
+                ],
+                "summary": "get device user metadata",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID|PRN|NICK",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/devices.UserMeta"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/utils.RError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/utils.RError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/utils.RError"
+                        }
+                    }
+                }
+            },
             "put": {
                 "security": [
                     {
@@ -3632,7 +3685,7 @@
                 }
             }
         },
-        "/tokens/create": {
+        "/tokens/": {
             "post": {
                 "security": [
                     {
@@ -5482,6 +5535,12 @@
                 }
             }
         },
+        "devices.UserMeta": {
+            "type": "object",
+            "additionalProperties": {
+                "type": "string"
+            }
+        },
         "devices.challengePayload": {
             "type": "object",
             "properties": {
@@ -5745,6 +5804,9 @@
                 "deleted-at": {
                     "type": "string"
                 },
+                "expire-at": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "string"
                 },
@@ -5757,13 +5819,19 @@
                 "owner-nick": {
                     "type": "string"
                 },
+                "parse-scopes": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/utils.Scope"
+                    }
+                },
                 "prn": {
                     "type": "string"
                 },
                 "scopes": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/utils.Scope"
+                        "type": "string"
                     }
                 },
                 "secret": {
@@ -5783,13 +5851,16 @@
         "tokenservice.AuthTokenReqPayload": {
             "type": "object",
             "properties": {
+                "expire-at": {
+                    "type": "string"
+                },
                 "name": {
                     "type": "string"
                 },
                 "scopes": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/utils.Scope"
+                        "type": "string"
                     }
                 },
                 "type": {
